fixed warnings for the classes and template